edittion on routing and addding profile page in action1

--- a/WebApplication2/Views/Shared/_StudentLayout.cshtml
+++ b/WebApplication2/Views/Shared/_StudentLayout.cshtml
@@ -36,13 +36,13 @@
     @* <link href="~/css/StyleSheet.css" rel="stylesheet"> *@
 
     <style>
-        .dropdown:hover .dropdown-menu {
+/*         .dropdown:hover .dropdown-menu {
             display: block;
         }
 
         .nav-tabs .dropdown-menu, .nav-pills .dropdown-menu, .navbar .dropdown-menu {
             margin-top: 0;
-        }
+        } */
     </style>
 </head>
 
@@ -60,7 +60,7 @@
     <header class="">
         <nav class="navbar navbar-expand-lg ">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-controller="home" asp-action="index">
+                <a class="navbar-brand" asp-controller="student" asp-action="index">
                     <h2><em>L</em>earn Consult</h2>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
