--- a/WebApplication2/Views/Shared/_Layout.cshtml
+++ b/WebApplication2/Views/Shared/_Layout.cshtml
@@ -82,13 +82,33 @@
                                 }
                             </ul>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item" >
                             <div class="search-form">
                                 <form method="post" action="index.html">
-                                    <div class="input-group">
-                                        <input type="search" class="form-control border-0 rounded-pill" name="search-input" value="" placeholder="Search Here" required="" />
-                                        <button class="btn btn-outline-secondary" type="button"><i class="fa fa-search"></i></button>
+                                    <div class="d-flex align-items-center p-2 rounded" style="background-color: #f5f7f9;">
+                                        <div class="dropdown me-2">
+                                            <button class="btn btn-outline-none" style="border: none; padding: 0;" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                                                All <span class="caret"></span>
+                                            </button>
+                                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                                <li><a class="dropdown-item" href="#">All</a></li>
+                                                <li><a class="dropdown-item" href="#">Category 1</a></li>
+                                                <li><a class="dropdown-item" href="#">Category 2</a></li>
+                                            </ul>
+                                        </div>
+                                        <div style="border-left: 1px solid #ccc; height: 30px; margin-right: 10px;"></div>
+                                        <input type="text" class="form-control border-0" style="box-shadow: none;" placeholder="search">
+                                        <button type="button" class="btn btn-outline-none" style="border: none; padding: 0;">
+                                            <span>&#x2716;</span>
+                                        </button>
+                                        <div style="border-left: 1px solid #ccc; height: 30px; margin: 0 10px;"></div>
+                                        <button type="button" class="btn btn-outline-none" style="border: none; padding: 0;">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                                                <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001l3.85 3.85a1 1 0 0 0 1.415-1.415l-3.85-3.85zm-5.648.196a5 5 0 1 1 7.071-7.07 5 5 0 0 1-7.07 7.07z" />
+                                            </svg>
+                                        </button>
                                     </div>
+
                                 </form>
                             </div>
                         </li>
@@ -169,8 +189,8 @@
         </nav>
     </header> *@
 
-    <di>@RenderBody()
-    </di>
+    <div>@RenderBody()
+    </div>
             
 
 
