--- a/WebApplication2/Views/Instructor/Profile.cshtml
+++ b/WebApplication2/Views/Instructor/Profile.cshtml
@@ -67,7 +67,54 @@
     Layout = "_InstructorLayout";
 }
 
-    <div class="banner header-text">
+
+
+<style>
+
+    .banner-item-1 {
+        padding: 50px 0px;
+        background-position: center center;
+    }
+</style>
+<div class="banner header-text">
+    <div class="owl-banner owl-carousel">
+        <div class="banner-item-1">
+        </div>
+    </div>
+</div>
+
+
+<div class="container">
+    <div class="row" style="margin-top:-75px">
+        <div class="col-md-3 text-center">
+            <img src="~/images/product_02.jpg" class="rounded-circle img-fluid" alt="Instructor Image" style="margin-bottom:20px">
+
+            <div class="btn-group-vertical w-50">
+
+                <a href="#" class="btn btn-outline-secondary mb-2"><i class="fa fa-twitter"></i></a>
+                <a href="#" class="btn btn-outline-secondary mb-2"><i class="fa fa-facebook"></i></a>
+                <a href="#" class="btn btn-outline-secondary mb-2"><i class="fa fa-linkedin"></i></a>
+                <a href="#" class="btn btn-outline-secondary mb-2"><i class="fa fa-youtube"></i></a>
+            </div>
+
+        </div>
+        <div class="col-md-9" style="padding:15px; margin-bottom:2px;">
+            <h3 class="fw-bold">Anudeep Ayyagari</h3>
+            <p>29-year UX + Design Veteran; Consultant, Author & Speaker</p>
+
+            <p>
+                <span class="text-danger">&#9733; 4.5</span> Instructor Rating
+                <br />
+                <span class="text-black"><i class="fa fa-comment"></i></span> 28,707 Reviews
+                <br />
+                <span class="text-black"><i class="fa fa-book"></i></span> 8 Courses
+            </p>
+
+        </div>
+    </div>
+</div>
+
+@*     <div class="banner header-text">
         <div class="owl-banner owl-carousel">
         </div>
     </div>
@@ -138,7 +185,7 @@
         </div>
 
 
-    </div>
+    </div> *@
 
 
 @*     <!-- Bootstrap core JavaScript -->
