--- a/WebApplication2/Views/Student/Profile.cshtml
+++ b/WebApplication2/Views/Student/Profile.cshtml
@@ -53,7 +53,49 @@
         </nav>
     </header> *@
 
+
 @{
+    Layout = "_StudentLayout";
+}
+
+<style>
+
+    .banner-item-1 {
+        padding: 50px 0px;
+        background-position: center center;
+    }
+</style>
+<div class="banner header-text">
+    <div class="owl-banner owl-carousel">
+        <div class="banner-item-1">
+        </div>
+    </div>
+</div>
+
+
+<div class="container">
+    <div class="row" style="margin-top:-75px">
+        <div class="col-md-3 text-center">
+            <img src="~/images/product_02.jpg" class="rounded-circle img-fluid" alt="Instructor Image" style="margin-bottom:20px">
+
+
+        </div>
+        <div class="col-md-9" style="padding:15px; margin-bottom:2px;">
+            <h3 class="fw-bold">Anudeep Ayyagari</h3>
+            <p>hieveryone@gmail.com</p>
+          
+            <p>
+
+                <span class="text-black"><i class="fa fa-comment"></i></span> 28,707 Reviews
+                <br />
+                <span class="text-black"><i class="fa fa-pencil-square"></i></span> 8 reports
+            </p>
+
+        </div>
+    </div>
+</div>
+
+@* @{
     Layout = "_StudentLayout";
 }
 
@@ -187,7 +229,7 @@
         </div>
 
 
-    </div>
+    </div> *@
 
 @* 
     <!-- Bootstrap core JavaScript -->
