--- a/WebApplication2/Views/Test/Action1.cshtml
+++ b/WebApplication2/Views/Test/Action1.cshtml
@@ -24,17 +24,14 @@
 <div class="container">
     <div class="row" style="margin-top:-75px">
         <div class="col-md-3 text-center">
-            <img src="~/images/product_02.jpg" class="rounded-circle img-fluid" alt="Instructor Image">
-            <br />
-            <br />
-            <br />
-            <br />
-            <div class="btn-group-vertical w-100">
-                <a href="#" class="btn btn-outline-secondary mb-2">Website</a>
-                <a href="#" class="btn btn-outline-secondary mb-2">Twitter</a>
-                <a href="#" class="btn btn-outline-secondary mb-2">Facebook</a>
-                <a href="#" class="btn btn-outline-secondary mb-2">LinkedIn</a>
-                <a href="#" class="btn btn-outline-secondary mb-2">YouTube</a>
+            <img src="~/images/product_02.jpg" class="rounded-circle img-fluid" alt="Instructor Image" style="margin-bottom:20px">
+
+            <div class="btn-group-vertical w-50">
+               
+                <a href="#" class="btn btn-outline-secondary mb-2"><i class="fa fa-twitter"></i></a>
+                <a href="#" class="btn btn-outline-secondary mb-2"><i class="fa fa-facebook"></i></a>
+                <a href="#" class="btn btn-outline-secondary mb-2"><i class="fa fa-linkedin"></i></a>
+                <a href="#" class="btn btn-outline-secondary mb-2"><i class="fa fa-youtube"></i></a>
             </div>
 
         </div>
