--- a/WebApplication2/Views/Shared/_Layout.cshtml
+++ b/WebApplication2/Views/Shared/_Layout.cshtml
@@ -22,16 +22,16 @@
     <title>Learn consult</title>
 
 
-     <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" asp-append-version="true">
+     <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" >
 @*      <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
  *@
     
 
-    <link href="~/css/site.css" rel="stylesheet" asp-append-version="true">
-    <link href="~/css/site1.css" rel="stylesheet" asp-append-version="true">
-    <link href="~/css/site2.css" rel="stylesheet" asp-append-version="true">
-    <link href="~/css/site3.css" rel="stylesheet" asp-append-version="true">
-    <link href="~/css/site4.css" rel="stylesheet" asp-append-version="true">
+    <link href="~/css/site.css" rel="stylesheet" > 
+    <link href="~/css/site1.css" rel="stylesheet">
+    <link href="~/css/site2.css" rel="stylesheet">
+    <link href="~/css/site3.css" rel="stylesheet">
+    <link href="~/css/site4.css" rel="stylesheet">
    @* <link href="~/css/StyleSheet.css" rel="stylesheet"> *@
 
      <style>
@@ -46,6 +46,10 @@
         .nav-tabs .dropdown-menu, .nav-pills .dropdown-menu, .navbar .dropdown-menu {
             margin-top: 0;
         } */
+
+
+
+
     </style> 
 </head>
 
@@ -60,8 +64,8 @@
     </div>
 
     <!-- Header -->
-    <header class=""style="position:relative;">
-        <nav class="navbar navbar-expand-lg ">
+    <header class="">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-controller="home" asp-action="index">
                     <h2><em>L</em>earn Consult</h2>
@@ -82,36 +86,40 @@
                                 }
                             </ul>
                         </li>
-                        <li class="nav-item" >
+
+
+                        <li class="nav-item w-95">
                             <div class="search-form">
-                                <form method="post" action="index.html">
-                                    <div class="d-flex align-items-center p-2 rounded" style="background-color: #f5f7f9;">
-                                        <div class="dropdown me-2">
-                                            <button class="btn btn-outline-none" style="border: none; padding: 0;" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                                <form method="post" action="index.html" class="d-flex w-100">
+                                    <div class="d-flex align-items-center w-100 p-2" style="border-radius: 25px; "> 
+                                        <li class="dropdown me-2">
+                                            <a class="nav-link dropdown-toggle" style="border: none; padding: 0; background: none;" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
                                                 All <span class="caret"></span>
-                                            </button>
+                                            </a>
                                             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                                 <li><a class="dropdown-item" href="#">All</a></li>
                                                 <li><a class="dropdown-item" href="#">Category 1</a></li>
                                                 <li><a class="dropdown-item" href="#">Category 2</a></li>
                                             </ul>
-                                        </div>
+                                        </li>
                                         <div style="border-left: 1px solid #ccc; height: 30px; margin-right: 10px;"></div>
-                                        <input type="text" class="form-control border-0" style="box-shadow: none;" placeholder="search">
-                                        <button type="button" class="btn btn-outline-none" style="border: none; padding: 0;">
+                                        <input type="text" class="form-control border-0 flex-grow-1" style="box-shadow: none;" placeholder="search">
+                                        <a role="button" class="nav-link" style="border: none; padding: 0; background: none; margin: 0 5px;">
                                             <span>&#x2716;</span>
-                                        </button>
+                                        </a>
                                         <div style="border-left: 1px solid #ccc; height: 30px; margin: 0 10px;"></div>
-                                        <button type="button" class="btn btn-outline-none" style="border: none; padding: 0;">
+                                        <a role="button" class="nav-link" style="border: none; padding: 0; background: none;">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
                                                 <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001l3.85 3.85a1 1 0 0 0 1.415-1.415l-3.85-3.85zm-5.648.196a5 5 0 1 1 7.071-7.07 5 5 0 0 1-7.07 7.07z" />
                                             </svg>
-                                        </button>
-                                    </div>
+                                        </a>
+                                      </div>
+                                 </form>
+                              </div>
+                          </li>
 
-                                </form>
-                            </div>
-                        </li>
+
+
                         <li class="nav-item">
                             <a class="nav-link" asp-controller="home" asp-action="ForInstructor">
                                 For Instructors
@@ -126,6 +134,7 @@
                     </ul>
                 </div>
             </div>
+            
         </nav>
     </header>
 
